--- a/index.html
+++ b/index.html
@@ -44,5 +44,24 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Showcase -->
+    <header id="showcase">
+      <div class="container">
+        <div class="showcase-container">
+          <div class="showcase-content">
+            <div class="category category-sports">Sports</div>
+            <h1>Some Sports Article</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis ipsum a porro quibusdam laudantium sunt, blanditiis
+              asperiores! Non, laborum quia! Maxime magnam inventore modi, dolor
+              tempora fugit temporibus quam enim?
+            </p>
+            <a href="article.html" class="btn btn-primary">Read More</a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
