--- a/index.html
+++ b/index.html
@@ -63,5 +63,101 @@
         </div>
       </div>
     </header>
+
+    <!-- Home Articles -->
+    <section id="home-articles" class="py-2">
+      <div class="container">
+        <h2>Editor Picks</h2>
+        <div class="articles-container">
+          <!-- article1 -->
+          <article class="card">
+            <!-- it will be a grid container -->
+            <img src="./img/articles/ent1.jpg" alt="ent1 pic" />
+            <!-- one grid item -->
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                quam eius ducimus optio veniam sit nihil beatae ea autem.
+                Doloribus.
+              </p>
+            </div>
+          </article>
+
+          <!-- article2 -->
+          <article class="card bg-dark">
+            <div class="category category-sports">Sports</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              quam eius ducimus optio veniam sit nihil beatae ea autem.
+              Doloribus.
+            </p>
+          </article>
+
+          <!-- article3 -->
+          <article class="card">
+            <img src="./img/articles/tech1.jpg" alt="tech1 pic" />
+            <div class="category category-tech">Technology</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              quam eius ducimus optio veniam sit nihil beatae ea autem.
+              Doloribus.
+            </p>
+          </article>
+
+          <!-- article4 -->
+          <article class="card">
+            <div class="category category-sports">Sports</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              quam eius ducimus optio veniam sit nihil beatae ea autem.
+              Doloribus.
+            </p>
+            <img src="./img/articles/sports1.jpg" alt="sports1 pic" />
+          </article>
+
+          <!-- article5 -->
+          <article class="card">
+            <img src="./img/articles/tech2.jpg" alt="tech1 pic" />
+            <div class="category category-tech">Technology</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              quam eius ducimus optio veniam sit nihil beatae ea autem.
+              Doloribus.
+            </p>
+          </article>
+
+          <!-- article6 -->
+          <article class="card bg-primary">
+            <div class="category category-sports">Sports</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              quam eius ducimus optio veniam sit nihil beatae ea autem.
+              Doloribus.
+            </p>
+          </article>
+
+          <!-- article7 -->
+          <article class="card">
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                quam eius ducimus optio veniam sit nihil beatae ea autem.
+                Doloribus.
+              </p>
+            </div>
+            <img src="./img/articles/ent2.jpg" alt="ent2 pic" />
+          </article>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
