--- a/index.html
+++ b/index.html
@@ -159,5 +159,55 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="main-footer" class="py-2">
+      <div class="container footer-container">
+        <div>
+          <img src="./img/logo_light.png" alt="Light logo of Kode News" />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+            deserunt assumenda enim non? Ratione ipsum voluptates fuga eos earum
+            vitae.
+          </p>
+        </div>
+
+        <!-- 2nd column -->
+        <div>
+          <h3>Email News Letter</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <form>
+            <input type="email" placeholder="Enter Email..." />
+            <input type="submit" value="Subscribe" class="btn btn-primary" />
+          </form>
+        </div>
+
+        <!-- 3rd column -->
+        <div>
+          <h3>Site Links</h3>
+          <ul class="list">
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- 4th column -->
+        <div>
+          <h2>Join Our Club</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+            nesciunt!
+          </p>
+          <a href="#" class="btn btn-secondary">Join Now</a>
+        </div>
+
+        <!-- pangmalakasan -->
+        <div>
+          <p>Copyright &copy; 2024 | All Rights Reserved | WD103P</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
